# tdjs-pkgpy

./: README.md  directory.json  manager.py  pyproject.toml
.pkgPy/cache/simple/tdjs_toolkit/: tdjs_toolkit-py3-none-any.whl
simple/: index.html
simple/tdjs-toolkit/: index.html
simple/toolkit/: index.html
